Add angular skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Maple Cake Gateway</title>
+    <title>&#x1F341;&#x1F382;</title>
   </head>
   <body>
-      <h1>&#x1F341;&#x1F382;</h1>
+    <app-root></app-root>
   </body>
 </html>
