--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>&#x1F341;&#x1F382;</title>
+    <title>Maple Cake Gateway</title>
   </head>
   <body>
     <app-root></app-root>
